[metadata]
name = tubular
description = Continuous Delivery scripts for pipeline evaluation

[files]
packages =
    tubular
    tubular.admin
    tubular.gocd
    tubular.scripts

[entry_points]
console_scripts =
    asgard-deploy.py = tubular.scripts.asgard_deploy:deploy
    boto_to_add_ingress.py = tubular.admin.boto_to_add_ingress:add_ingress_rule
    check_migrate_duration.py = tubular.scripts.check_migrate_duration:check_migrate_duration
    check_pr_against_branch.py = tubular.script.check_pr_against_branch:cli
    check_pr_tests_status.py = tubular.script.check_pr_tests_status:check_tests
    cleanup-asgs.py = tubular.script.cleanup_asgs:delete_asg
    create_pr.py = tubular.script.create_pr:create_pull_request
    create_release_candidate.py = tubular.script.create_release_candidate:create_release_candidate
    create_tag.py = tubular.script.create_tag:create_tag
    cut_branch.py = tubular.script.cut_branch:create_release_candidate
    delete-asg.py = tubular.script.delete_asg:delete_asg
    drupal_backup_database.py = tubular.script.drupal_backup_database:backup_database
    drupal_clear_varnish.py = tubular.script.drupal_clear_varnish:clear_varnish_cache
    drupal_deploy.py = tubular.script.drupal_deploy:deploy
    drupal_fetch_deployed_tag.py = tubular.script.drupal_fetch_deployed_tag:fetch_deployed_tag
    format_rsa_key.py = tubular.script.format_rsa_key:format_rsa_key
    jenkins_trigger_build.py = tubular.script.jenkins_trigger_build:trigger
    merge_branch.py = tubular.script.merge_branch:merge_branch
    merge_pr.py = tubular.script.merge_pr:merge_pull_request
    message_prs_in_range.py = tubular.script.message_prs_in_range:message_pull_requests
    poll_pr_tests_status.py = tubular.script.poll_pr_tests_status:poll_tests
    restrict_to_stage.py = tubular.script.restrict_to_stage:restrict_ami_to_stage
    retrieve_base_ami.py = tubular.script.retrieve_base_ami:retrieve_base_ami
    rollback_asg.py = tubular.script.rollback_asg:rollback
    submit_hipchat_msg.py = tubular.script.submit_hipchat_msg:cli
    update_release_page.py = tubular.script.update_release_page:create_release_page
    validate_edp.py = tubular.script.validate_edp:validate_cli

[extras]
test =
    caniusepython3
    ddt==1.0.1
    edx_lint
    moto==0.4.30
    mock==2.0.0
    pep8==1.7.0
    pylint
    pytest==3.0.5
    pytest-xdist==1.15.0
    responses==0.5.0
    requests_mock
dev =
    ipython