[metadata]
name = tubular
description = Continuous Delivery scripts for pipeline evaluation

[files]
packages =
    tubular
    tubular.admin
    tubular.gocd
    tubular.scripts

[entry_points]
console_scripts =
    approve_stage.py = tubular.scripts.approve_stage:approve_stage
    asgard-deploy.py = tubular.scripts.asgard_deploy:deploy
    boto_to_add_ingress.py = tubular.admin.boto_to_add_ingress:add_ingress_rule
    check_migrate_duration.py = tubular.scripts.check_migrate_duration:check_migrate_duration
    check_pr_against_branch.py = tubular.scripts.check_pr_against_branch:cli
    check_pr_tests_status.py = tubular.scripts.check_pr_tests_status:check_tests
    cleanup-asgs.py = tubular.scripts.cleanup_asgs:delete_asg
    create_pr.py = tubular.scripts.create_pr:create_pull_request
    create_release_candidate.py = tubular.scripts.create_release_candidate:create_release_candidate
    create_tag.py = tubular.scripts.create_tag:create_tag
    cut_branch.py = tubular.scripts.cut_branch:create_release_candidate
    delete-asg.py = tubular.scripts.delete_asg:delete_asg
    drupal_backup_database.py = tubular.scripts.drupal_backup_database:backup_database
    drupal_clear_varnish.py = tubular.scripts.drupal_clear_varnish:clear_varnish_cache
    drupal_deploy.py = tubular.scripts.drupal_deploy:deploy
    drupal_fetch_deployed_tag.py = tubular.scripts.drupal_fetch_deployed_tag:fetch_deployed_tag
    format_rsa_key.py = tubular.scripts.format_rsa_key:format_rsa_key
    jenkins_trigger_build.py = tubular.scripts.jenkins_trigger_build:trigger
    merge_branch.py = tubular.scripts.merge_branch:merge_branch
    merge_pr.py = tubular.scripts.merge_pr:merge_pull_request
    message_prs_in_range.py = tubular.scripts.message_prs_in_range:message_pull_requests
    poll_pr_tests_status.py = tubular.scripts.poll_pr_tests_status:poll_tests
    restrict_to_stage.py = tubular.scripts.restrict_to_stage:restrict_ami_to_stage
    retrieve_base_ami.py = tubular.scripts.retrieve_base_ami:retrieve_base_ami
    rollback_asg.py = tubular.scripts.rollback_asg:rollback
    submit_hipchat_msg.py = tubular.scripts.submit_hipchat_msg:cli
    update_release_page.py = tubular.scripts.update_release_page:create_release_page
    validate_edp.py = tubular.scripts.validate_edp:validate_cli

[extras]
test =
    ddt==1.0.1
    edx_lint
    moto==0.4.30
    mock==2.0.0
    pep8==1.7.0
    pylint
    pytest==3.0.5
    pytest-xdist==1.15.0
    pytest-pylint
    pytest-pep8
    responses==0.5.0
    requests_mock
dev =
    ipython
    tox
    tox-pyenv
