[metadata]
name = tubular
description = Continuous Delivery scripts for pipeline evaluation
classifier =
    Programming Language :: Python 3
    Programming Language :: Python 3.5
    Programming Language :: Python 3.8


[files]
packages =
    tubular
    tubular.admin
    tubular.gocd
    tubular.scripts

[entry_points]
console_scripts =
    approve_stage.py = tubular.scripts.approve_stage:approve_stage
    asgard-deploy.py = tubular.scripts.asgard_deploy:deploy
    boto_to_add_ingress.py = tubular.admin.boto_to_add_ingress:add_ingress_rule
    check_migrate_duration.py = tubular.scripts.check_migrate_duration:check_migrate_duration
    check_pr_against_branch.py = tubular.scripts.check_pr_against_branch:cli
    check_pr_tests_status.py = tubular.scripts.check_pr_tests_status:check_tests
    cleanup-asgs.py = tubular.scripts.cleanup_asgs:delete_asg
    cleanup_instances.py = tubular.scripts.cleanup_instances:terminate_instances
    create_pr.py = tubular.scripts.create_pr:create_pull_request
    create_private_to_public_pr.py = tubular.scripts.create_private_to_public_pr:create_private_to_public_pr
    create_release_candidate.py = tubular.scripts.create_release_candidate:create_release_candidate
    create_tag.py = tubular.scripts.create_tag:create_tag
    cut_branch.py = tubular.scripts.cut_branch:create_release_candidate
    delete-asg.py = tubular.scripts.delete_asg:delete_asg
    delete_expired_partner_gdpr_reports.py = tubular.scripts.delete_expired_partner_gdpr_reports:delete_expired_reports
    drupal_backup_database.py = tubular.scripts.drupal_backup_database:backup_database
    drupal_clear_varnish.py = tubular.scripts.drupal_clear_varnish:clear_varnish_cache
    drupal_deploy.py = tubular.scripts.drupal_deploy:deploy
    drupal_fetch_deployed_tag.py = tubular.scripts.drupal_fetch_deployed_tag:fetch_deployed_tag
    find_and_advance_pipeline.py = tubular.scripts.find_and_advance_pipeline:find_and_advance_pipeline
    frontend_build.py = tubular.scripts.frontend_build:frontend_build
    frontend_deploy.py = tubular.scripts.frontend_deploy:frontend_deploy
    frontend_multi_build.py = tubular.scripts.frontend_multi_build:frontend_build
    frontend_multi_deploy.py = tubular.scripts.frontend_multi_deploy:frontend_deploy
    get_learners_to_retire.py = tubular.scripts.get_learners_to_retire:get_learners_to_retire
    jenkins_trigger_build.py = tubular.scripts.jenkins_trigger_build:trigger
    merge-approved-prs = tubular.scripts.merge_approved_prs:octomerge
    merge_branch.py = tubular.scripts.merge_branch:merge_branch
    merge_pr.py = tubular.scripts.merge_pr:merge_pull_request
    message_prs_in_range.py = tubular.scripts.message_prs_in_range:message_pull_requests
    poll_pr_tests_status.py = tubular.scripts.poll_pr_tests_status:poll_tests
    prune_modulestore.py = tubular.scripts.prune_modulestore:prune_modulestore
    push_public_to_private.py = tubular.scripts.push_public_to_private:push_public_to_private
    purge_cloudflare_cache.py = tubular.scripts.purge_cloudflare_cache:purge_cloudflare_cache
    restrict_to_stage.py = tubular.scripts.restrict_to_stage:restrict_ami_to_stage
    retire_one_learner.py = tubular.scripts.retire_one_learner:retire_learner
    retirement_archive_and_cleanup.py = tubular.scripts.retirement_archive_and_cleanup:archive_and_cleanup
    retirement_bulk_status_update.py = tubular.scripts.retirement_bulk_status_update:update_statuses
    retirement_partner_report.py = tubular.scripts.retirement_partner_report:generate_report
    retrieve_latest_base_ami.py = tubular.scripts.retrieve_latest_base_ami:retrieve_latest_base_ami
    rollback_asg.py = tubular.scripts.rollback_asg:rollback
    structures.py = tubular.scripts.structures:cli
    update_release_page.py = tubular.scripts.update_release_page:create_release_page
    validate_edp.py = tubular.scripts.validate_edp:validate_cli
    submit_slack_msg.py = tubular.scripts.submit_slack_msg:submit_slack_msg
    update_recent_deployers.py = tubular.scripts.update_recent_deployers:update_recent_deployers
    alert_opsgenie.py = tubular.scripts.alert_opsgenie:alert_opsgenie

[extras]
test =
    astroid==2.3.3
    ddt==1.0.1
    edx_lint
    httpretty<1.0.0
    moto==0.4.31
    mock
    pylint==2.4.2
    pep8==1.7.0
    pytest
    pytest-xdist
    pytest-pylint
    pytest-pep8
    responses
    requests_mock
    wrapt==1.11.*
dev =
    ipython
    tox
    tox-pyenv
